# Potok

./: .env.template  .gitignore  README.md  WORKLOG.md  alembic.ini  docker-compose-all-in-one.yml  docker-compose-separated.yml  docker-compose.yml  pyproject.toml  task_batch_provider_adaptive_pid.py
alembic/: env.py
alembic/versions/: 002f761f0afd_07_added_api_token.py  06d165596b6a_01_init.py  09558449b3cc_added_unique_constraint_for_checksum_in_.py  2da1cacad586_05_added_title_and_description_to_.py  d60b90481319_01_init.py  (+6 more)
devops/: Dockerfile.dev
imitation_modelling/: aimd_log  aimd_visualizer.py  algorithm_generator.py  broker.py  config_generator.py  handler.py  handlers_scalling_controller.py  main.py  metric_collector.py  pid_log  pid_visualizer.py  processor.py  repo.py  schemas.py  system_runner.py  task_batch_provider.py  task_batch_provider_aimd.py  task_batch_provider_builder.py  task_batch_provider_pid.py  task_manager.py
service/: di.py  main.py  settings.py
templates/: 404.html  api_keys.html  base.html  dashboard.html  index.html  login.html  monitoring_algorithm.html  monitoring_algorithms.html  payload.html  payloads.html  project.html  projects.html  task_create.html  task_detail.html  task_detailed.html  task_group.html  task_group_2.html  task_groups.html  task_run_detailed.html  tasks.html  users.html
tests/: conftest.py  test_AbstractSARepo.py  test_CleanupTaskRunsUC.py  test_CompressTaskProgressUC.py  test_CreateFirstAdminUC.py  test_CreateTaskRunsUC.py  test_CreateTasksUC.py  test_DefaultExecutionBoundsProvider.py  test_GetAllTaskGroupStatisticsUC.py  test_MonitoringAlgorithm_use_cases.py  test_PayloadProvider.py  test_ReceiveTaskRunExecitionStatusUC.py  test_SAPeriodicMonitoringAlgorithmRepo.py  test_SARecentTaskRunsProvider.py  test_SASingleMonitoringAlgorithmRepo.py  test_SAWaitingTaskRunProvider.py  test_TimeIntervalExecutionBoundsCutter.py  test_TransitStatusFromQueuedToInterruptedUC.py  test_TransitTaskStatusUC.py  utils.py
(+157 files in other folders)
