[project]
name = "service"
version = "0.1.0"
description = ""
authors = [
    {name = "Matvey Lomovtsev"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "aio-pika (>=9.5.8,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "aiosqlite (>=0.21.0,<0.22.0)"
]
