[project]
name = "service"
version = "0.1.0"
description = ""
authors = [
    {name = "Matvey Lomovtsev"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "aio-pika (>=9.5.8,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "more-itertools (>=10.8.0,<11.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "pyjwt[crypto] (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pandas (>=3.0.1,<4.0.0)"
]
